# rlm-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  rlm_mcp.py  rlm_trace_cli.py  run_server.sh  smithery.yaml
.github/workflows/: ci.yml
bench/: README.md
bench/cdna4-isa/: README.md  RESULTS.md  generate_report.py  questions.jsonl
bench/cdna4-isa/gepa/: README.md  __init__.py  pipeline.py  run.py
bench/cdna4-isa/inputs/: cdna4_isa.txt
bench/cdna4-isa/results/demo/: scores.json
bench/cdna4-isa/results/demo/baseline/: Q01.json  Q02.json  Q03.json  Q05.json  Q08.json  Q10.json  Q12.json  Q14.json  Q15.json  Q16.json  Q18.json
bench/cdna4-isa/results/demo/rlm/: Q01.json  Q02.json  Q03.json  Q05.json  Q08.json  Q10.json  Q12.json  Q14.json  Q15.json  Q16.json  Q18.json
bench/cdna4-isa/runners/: __init__.py  baseline.py  common.py  rlm.py
bench/cdna4-isa/scoring/: __init__.py  llm_judge.py
bench/codebase-triage/: config.yaml  questions.jsonl
bench/codebase-triage/inputs/: README.md
bench/common/: __init__.py  config.py
bench/gpu-kernels/: config.yaml  questions.jsonl
bench/gpu-kernels/inputs/: README.md
client-harness/: README.md
client-harness/claude-code/agents/: rlm-analyst.md
client-harness/claude-code/commands/: rlm-load.md
client-harness/claude-code/memory/: rlm-snippet.md
client-harness/claude-desktop/: README.md
client-harness/codex/: agents-md-snippet.md
client-harness/codex/skills/rlm/: SKILL.md
client-harness/gemini/extension/: gemini-extension.json
client-harness/gemini/extension/agents/: rlm-analyst.md
client-harness/gemini/extension/commands/: rlm-analyze.toml
client-harness/gemini/extension/skills/rlm/: SKILL.md
client-harness/gemini/memory/: gemini-snippet.md
dspy_rlm/: README.md  __init__.py  module.py  signatures.py
eval/: README.md  __init__.py  harness.py
eval/loaders/: __init__.py  browsecomp.py  longbench.py  oolong.py  sniah.py
eval/runners/: __init__.py  mcp_client.py
examples/: README.md  codebase-triage.md  kernel-research.md  paper-analysis.md
gepa/: README.md  __init__.py  gepa_optimize.py  metrics.py  signatures.py  trace_to_dataset.py
gepa/_diagnostics/: README.md  __init__.py  legacy_metrics.py  legacy_optimize.py  trace_to_dataset.py
scripts/: deploy_harness.py  install_clients.py  verify_clients.py  verify_end_to_end.py  verify_harness.py
tests/: test_gepa_contract.py
