[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-repl-mcp"
version = "0.2.0"
description = "Simple RLM-style persistent text REPL exposed over MCP. Load huge files, peek/grep/chunk them from any MCP client (Claude Desktop, Codex CLI, Gemini CLI, etc.)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OCWC22" }]
requires-python = ">=3.10"
dependencies = ["mcp>=1.2"]
keywords = ["mcp", "rlm", "long-context", "llm", "claude", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/OCWC22/rlm-repl-mcp"
Issues   = "https://github.com/OCWC22/rlm-repl-mcp/issues"

[project.scripts]
rlm-mcp = "rlm_mcp:main"

[tool.hatch.build.targets.wheel]
only-include = ["rlm_mcp.py"]
