[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-mcp-server"
version = "0.2.0"
description = "Simple RLM-style persistent text REPL exposed over MCP. Load huge files, peek/grep/chunk them from any MCP client (Claude Desktop, Codex CLI, Gemini CLI, etc.)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OCWC22" }]
requires-python = ">=3.10"
dependencies = ["mcp>=1.2"]
keywords = ["mcp", "rlm", "long-context", "llm", "claude", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]


[project.optional-dependencies]
gepa = ["dspy-ai>=3.1.3", "gepa>=0.1.1"]
eval = ["datasets>=2.18"]
all = ["dspy-ai>=3.1.3", "gepa>=0.1.1", "datasets>=2.18"]

[project.urls]
Homepage = "https://github.com/OCWC22/rlm-mcp-server"
Issues   = "https://github.com/OCWC22/rlm-mcp-server/issues"

[project.scripts]
rlm-mcp = "rlm_mcp:main"
rlm-trace = "rlm_trace_cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["rlm_mcp.py", "rlm_trace_cli.py", "gepa", "eval"]
